Z-Index img bug

--- a/sass/components/_image.scss
+++ b/sass/components/_image.scss
@@ -1,6 +1,7 @@
 .composition{
 
   position: relative;
+  z-index: 9999;
 
   &__photo{
 
